Fix login functionality and update deployment settings

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"neverMindDeployCard":true}
+{"projectId":"prj_V90SYdMZtH10GVbPWX9qTpKco1K2","orgId":"team_gHWvfc8H6J9zA3ZQf3Hranj8","projectName":"trae_tw0jtayj","neverMindDeployCard":true}
