--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.59.0",
     "@wagmi/core": "^2.14.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -33,6 +34,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.3.0",
+    "recharts": "^3.2.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.21.49",
     "wagmi": "^2.12.29",
