--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "concurrently \"npm run client:dev\" \"npm run server:dev\""
   },
   "dependencies": {
+    "@google/gemini-cli": "^0.6.1",
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.1",
@@ -21,14 +22,21 @@
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.59.0",
     "@wagmi/core": "^2.14.4",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ethers": "^6.13.4",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "framer-motion": "^11.11.17",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
+    "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.1",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
@@ -36,6 +44,8 @@
     "react-router-dom": "^7.3.0",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.21.49",
     "wagmi": "^2.12.29",
@@ -43,9 +53,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.15.30",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-kakao": "^1.0.3",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
