--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
